Added hyperparameter tuning for SVD++ model using GridSearchCV Tuned parameters include n_factors, n_epochs, lr_all and reg_all Evaluated the model using RMSE and MAE across 3-fold cross-validation Retrained the model on the with the best pamrameters

--- a/recommendationsystem-amazonfoodreviews.ipynb
+++ b/recommendationsystem-amazonfoodreviews.ipynb
@@ -867,12 +867,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b861b7f",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning\n",
+    "\n",
+    "This cell performs hyperparameter tuning for the `SVDpp` model using grid search to find the best parameters based on RMSE and MAE."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bde9dbb777de2a0b",
+   "id": "7039cd63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "param_grid = {\n",
+    "    'n_factors': [50,100,150],\n",
+    "    'n_epochs': [10,20],\n",
+    "    'lr_all': [0.002,0.005],\n",
+    "    'reg_all': [0.02,0.1,0.2]\n",
+    "}\n",
+    "\n",
+    "gs = SurpriseGridSearchCV(SVDpp, param_grid, measures=['rmse','mae'], cv=3, n_jobs=-1)\n",
+    "gs.fit(data)\n",
+    "\n",
+    "print(\"Best RMSE score attained: \", gs.best_score['rmse'])\n",
+    "print(\"Best parameters: \", gs.best_params['rmse'])\n",
+    "\n",
+    "best_algo = SVDpp(**gs.best_params['rmse'], random_state=42)\n",
+    "full_trainset = data.build_full_trainset()\n",
+    "best_algo.fit(full_trainset)"
+   ]
   }
  ],
  "metadata": {
