Added model evaluation with RMSE, MAE, precision, and recall

--- a/recommendationsystem-amazonfoodreviews.ipynb
+++ b/recommendationsystem-amazonfoodreviews.ipynb
@@ -900,6 +900,54 @@
     "full_trainset = data.build_full_trainset()\n",
     "best_algo.fit(full_trainset)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ad46872",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation\n",
+    "\n",
+    "This cell evaluates the trained model on the test set, calculating RMSE and MAE. It also defines a function to calculate precision and recall at k."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bc5813b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = best_algo.test(testset)\n",
+    "rmse = accuracy.rmse(predictions)\n",
+    "mae = accuracy.mae(predictions)\n",
+    "\n",
+    "print(f\"\\nTest RMSE: {rmse:.4f}\")\n",
+    "print(f\"Test MAE: {mae:.4f}\")\n",
+    "\n",
+    "def precision_recall_at_k(predictions, k=10, threshold=3.5):\n",
+    "    user_est_true = {}\n",
+    "    for uid, iid, true_r, est, _ in predictions:\n",
+    "        user_est_true.setdefault(uid, []).append((est, true_r))\n",
+    "\n",
+    "    precisions = []\n",
+    "    recalls = []\n",
+    "    for uid, user_ratings in user_est_true.items():\n",
+    "        user_ratings.sort(key=lambda x: x[0], reverse=True)\n",
+    "        top_k = user_ratings[:k]\n",
+    "        n_rel = sum((true_r >= threshold) for (_, true_r) in user_ratings)\n",
+    "        n_rec_k = sum((true_r >= threshold) for (_, true_r) in top_k)\n",
+    "\n",
+    "        if n_rel > 0:\n",
+    "            precisions.append(n_rec_k / k)\n",
+    "            recalls.append(n_rec_k / n_rel)\n",
+    "\n",
+    "    return np.mean(precisions), np.mean(recalls)\n",
+    "\n",
+    "precision, recall = precision_recall_at_k(predictions, k=10, threshold=3.5)\n",
+    "print(f\"Precision@10: {precision:.4f}\")\n",
+    "print(f\"Recall@10: {recall:.4f}\")"
+   ]
   }
  ],
  "metadata": {
