testing and exporting model artifacts

--- a/recommendationsystem-amazonfoodreviews.ipynb
+++ b/recommendationsystem-amazonfoodreviews.ipynb
@@ -1057,12 +1057,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49504a5f-f3b7-4dc3-9157-3d5d635a6c17",
+   "metadata": {},
+   "source": [
+    "## Testing the Recommendation Function\n",
+    "\n",
+    "This cell tests the hybrid recommendation function for a sample user and prints the top 5 recommended items."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b92d31-05df-49f2-8b92-42f5d70ddbb7",
+   "id": "9e1b76ca-956a-4d56-901e-9ab86f52e18c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample_user = ratings_df['UserId'].sample(1).iloc[0]\n",
+    "print(\"Testing recommendations for user:\", sample_user)\n",
+    "recommended_items = hybrid_recommendations(sample_user, top_n=5)\n",
+    "print(\"Top 5 recommended items for the user:\")\n",
+    "for rank, (pid, score) in enumerate(recommended_items, start=1):\n",
+    "    print(f\"{rank}. ProductID: {pid} | Score: {score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07498d9a-8207-4f29-b4bd-28fa60ab2b66",
+   "metadata": {},
+   "source": [
+    "## Export Model Artifacts\n",
+    "\n",
+    "This cell exports the trained model and related artifacts to a file for later use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc1050b3-9eb8-4f1d-99e0-f143839944cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_artifacts = {\n",
+    "    'best_algo': best_algo,\n",
+    "    'ratings_df': ratings_df,\n",
+    "    'tfidf': tfidf,\n",
+    "    'item_texts': item_texts,\n",
+    "    'item_index_map': item_index_map,\n",
+    "    'item_similarity': item_similarity,\n",
+    "    'alpha': ALPHA\n",
+    "}\n",
+    "\n",
+    "with open(MODEL_EXPORT_PATH, 'wb') as f:\n",
+    "    pickle.dump(model_artifacts, f)\n",
+    "\n",
+    "print(f\"\\nModel and artifacts exported to {MODEL_EXPORT_PATH}\")"
+   ]
   }
  ],
  "metadata": {
