updated export model artifacts

--- a/recommendationsystem-amazonfoodreviews.ipynb
+++ b/recommendationsystem-amazonfoodreviews.ipynb
@@ -12,42 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c87e9c67-48d8-48da-8dfe-b85158ca26aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mDEPRECATION: Loading egg at /opt/anaconda3/lib/python3.12/site-packages/files2rouge-2.1.0-py3.12.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\u001b[0m\u001b[33m\n",
-      "\u001b[0mCollecting scikit-surprise\n",
-      "  Downloading scikit_surprise-1.1.4.tar.gz (154 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.4/154.4 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: joblib>=1.2.0 in /opt/anaconda3/lib/python3.12/site-packages (from scikit-surprise) (1.4.2)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in /opt/anaconda3/lib/python3.12/site-packages (from scikit-surprise) (1.26.4)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /opt/anaconda3/lib/python3.12/site-packages (from scikit-surprise) (1.13.1)\n",
-      "Building wheels for collected packages: scikit-surprise\n",
-      "  Building wheel for scikit-surprise (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for scikit-surprise: filename=scikit_surprise-1.1.4-cp312-cp312-macosx_11_0_arm64.whl size=485277 sha256=301126be2dc2f861f435380002e1f616b79731f6acb5a2063611ee0207a0c3f8\n",
-      "  Stored in directory: /Users/yogeshneupane/Library/Caches/pip/wheels/75/fa/bc/739bc2cb1fbaab6061854e6cfbb81a0ae52c92a502a7fa454b\n",
-      "Successfully built scikit-surprise\n",
-      "\u001b[33mDEPRECATION: omegaconf 2.0.6 has a non-standard dependency specifier PyYAML>=5.1.*. pip 24.1 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of omegaconf or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
-      "\u001b[0mInstalling collected packages: scikit-surprise\n",
-      "Successfully installed scikit-surprise-1.1.4\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install scikit-surprise\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -96,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "77c75ee48db26e2d",
    "metadata": {
     "ExecuteTime": {
@@ -141,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "da7a204db0cbfa68",
    "metadata": {
     "ExecuteTime": {
@@ -194,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "16b9bf354ce2733a",
    "metadata": {
     "ExecuteTime": {
@@ -237,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "495b2bd358a1505b",
    "metadata": {
     "ExecuteTime": {
@@ -323,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "d72982e64b137b8c",
    "metadata": {
     "ExecuteTime": {
@@ -392,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "6ad11410ae46c787",
    "metadata": {
     "ExecuteTime": {
@@ -435,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "4aaa5bcf134d938c",
    "metadata": {
     "ExecuteTime": {
@@ -481,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "b21bea423d4bbf50",
    "metadata": {
     "ExecuteTime": {
@@ -494,7 +459,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x_/krn821251zdbmbqf3vm0jg040000gn/T/ipykernel_47416/3616123788.py:3: FutureWarning: 'Y' is deprecated and will be removed in a future version, please use 'YE' instead.\n",
+      "/var/folders/1d/hmqdpp213614518cm1194z3w0000gn/T/ipykernel_44119/3616123788.py:3: FutureWarning: 'Y' is deprecated and will be removed in a future version, please use 'YE' instead.\n",
       "  reviews_per_year = ratings_df.set_index('Time').resample('Y').count()['Score']\n"
      ]
     },
@@ -532,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "a3273da55b4e59e4",
    "metadata": {
     "ExecuteTime": {
@@ -574,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "bf9821f26e083bcc",
    "metadata": {
     "ExecuteTime": {
@@ -659,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "a07ba67d93635391",
    "metadata": {
     "ExecuteTime": {
@@ -672,7 +637,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x_/krn821251zdbmbqf3vm0jg040000gn/T/ipykernel_47416/3210171034.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/1d/hmqdpp213614518cm1194z3w0000gn/T/ipykernel_44119/3210171034.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -714,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "id": "8aeada34e2f0539e",
    "metadata": {
     "ExecuteTime": {
@@ -756,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "d609d4b8fcd7ad39",
    "metadata": {
     "ExecuteTime": {
@@ -811,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "6f6ab393d6719690",
    "metadata": {
     "ExecuteTime": {
@@ -854,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "id": "eb92544e497c4c43",
    "metadata": {
     "ExecuteTime": {
@@ -870,12 +835,12 @@
       "Evaluating RMSE, MAE of algorithm SVDpp on 3 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Mean    Std     \n",
-      "RMSE (testset)    0.7952  0.7973  0.7959  0.7961  0.0009  \n",
-      "MAE (testset)     0.5301  0.5300  0.5296  0.5299  0.0002  \n",
-      "Fit time          1.45    1.46    1.48    1.47    0.01    \n",
-      "Test time         0.72    0.80    0.72    0.75    0.04    \n",
+      "RMSE (testset)    0.7927  0.8032  0.7927  0.7962  0.0050  \n",
+      "MAE (testset)     0.5286  0.5310  0.5267  0.5288  0.0017  \n",
+      "Fit time          0.71    0.72    0.72    0.72    0.01    \n",
+      "Test time         0.44    0.36    0.42    0.40    0.03    \n",
       "\n",
-      "Baseline SVD++ CV Results: {'test_rmse': array([0.79515162, 0.79725716, 0.79594862]), 'test_mae': array([0.53008697, 0.52997227, 0.52956083]), 'fit_time': (1.4531691074371338, 1.463961124420166, 1.4785020351409912), 'test_time': (0.7227797508239746, 0.8002791404724121, 0.717926025390625)}\n"
+      "Baseline SVD++ CV Results: {'test_rmse': array([0.79265911, 0.80323335, 0.79266452]), 'test_mae': array([0.52856728, 0.53097569, 0.52672598]), 'fit_time': (0.708651065826416, 0.7164702415466309, 0.7221040725708008), 'test_time': (0.43735194206237793, 0.36092090606689453, 0.41666316986083984)}\n"
      ]
     }
    ],
@@ -903,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "id": "7039cd63",
    "metadata": {},
    "outputs": [
@@ -911,17 +876,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best RMSE score attained:  0.8220135179191098\n",
+      "Best RMSE score attained:  0.8233276568411397\n",
       "Best parameters:  {'n_factors': 100, 'n_epochs': 20, 'lr_all': 0.005, 'reg_all': 0.02}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVDpp at 0x16ce15850>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVDpp at 0x32e149dc0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "id": "3bc5813b",
    "metadata": {},
    "outputs": [
@@ -1019,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "id": "36a35bd5-9680-4def-ba1f-b9ddaa1d5620",
    "metadata": {},
    "outputs": [],
@@ -1068,10 +1033,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "9e1b76ca-956a-4d56-901e-9ab86f52e18c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing recommendations for user: A3J96H3C5XODXK\n",
+      "Top 5 recommended items for the user:\n",
+      "1. ProductID: B000WFRYWU | Score: 3.6108\n",
+      "2. ProductID: B0006NEHLY | Score: 3.6007\n",
+      "3. ProductID: B001E5E1C8 | Score: 3.5983\n",
+      "4. ProductID: B001E50R4Y | Score: 3.5944\n",
+      "5. ProductID: B005QRPH78 | Score: 3.5865\n"
+     ]
+    }
+   ],
    "source": [
     "sample_user = ratings_df['UserId'].sample(1).iloc[0]\n",
     "print(\"Testing recommendations for user:\", sample_user)\n",
@@ -1093,10 +1072,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "bc1050b3-9eb8-4f1d-99e0-f143839944cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model and artifacts exported to model_artifacts.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "model_artifacts = {\n",
     "    'best_algo': best_algo,\n",
